fix(hive-group): adjust margin-top for even hexgrid items for better alignment

--- a/components/ui/HiveGroup/index.scss
+++ b/components/ui/HiveGroup/index.scss
@@ -48,6 +48,6 @@
 
   &__hexgrid > div:nth-child(even) {
     margin-left: 16px;
-    margin-top: 32px;
+    margin-top: 28px;
   }
 }
